# prompt-shield

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
promptshield/: __init__.py  detector.py  middleware.py  patterns.py  sanitizer.py
tests/: test_detector.py  test_sanitizer.py
